[gd_scene load_steps=17 format=3 uid="uid://bnkw1a1oa6ast"]

[ext_resource type="Theme" uid="uid://hr4juv1yygjn" path="res://ByteCraft.tres" id="1_t1jse"]
[ext_resource type="Script" path="res://Scenes/prebuild_selection.gd" id="2_awtif"]
[ext_resource type="Texture2D" uid="uid://ysewr685bdhu" path="res://Assets/Office1.png" id="3_x1mub"]
[ext_resource type="FontFile" uid="uid://dy3or7vdan16i" path="res://Fonts/Abel-Regular.ttf" id="3_ysc4p"]
[ext_resource type="StyleBox" uid="uid://hcy7api4bxam" path="res://CircleButtonHover.tres" id="4_dq6qx"]
[ext_resource type="StyleBox" uid="uid://bw4prfqkw3dma" path="res://CircleButton.tres" id="5_bky6q"]
[ext_resource type="Texture2D" uid="uid://jm2j8n8cvunp" path="res://Assets/office2.png" id="6_yyt8q"]
[ext_resource type="Texture2D" uid="uid://c5mkdkrp8sra2" path="res://Assets/office3.png" id="7_62s6n"]
[ext_resource type="Texture2D" uid="uid://c0jc4pqmb52g8" path="res://Assets/PC.png" id="8_gjx2m"]
[ext_resource type="Texture2D" uid="uid://b6gjosq341bkc" path="res://Assets/Gaming2.png" id="9_ty3kk"]
[ext_resource type="Texture2D" uid="uid://dtjovdeo8lupf" path="res://Assets/Gaming3.png" id="10_dkcge"]
[ext_resource type="Texture2D" uid="uid://clma2m31m654s" path="res://Assets/arrow.png" id="11_sf65b"]
[ext_resource type="AudioStream" uid="uid://d0pwh0fwj5rgd" path="res://Assets/Sounds/WAGFX_Button_61.wav" id="13_6it2k"]

[sub_resource type="LabelSettings" id="LabelSettings_eu316"]
font_size = 75

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vbtvx"]

[sub_resource type="LabelSettings" id="LabelSettings_qdg4k"]
font_size = 53

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 6
theme = ExtResource("1_t1jse")
script = ExtResource("2_awtif")
metadata/_edit_use_anchors_ = true

[node name="BG" type="Panel" parent="."]
custom_minimum_size = Vector2(1125, 2436)
layout_direction = 1
layout_mode = 2
offset_right = 1125.0
offset_bottom = 2436.0
theme = ExtResource("1_t1jse")

[node name="Selection" type="Label" parent="."]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 2
offset_left = 49.0
offset_top = 673.0
offset_right = 1049.0
offset_bottom = 873.0
size_flags_vertical = 8
theme = ExtResource("1_t1jse")
label_settings = SubResource("LabelSettings_eu316")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_top = 908.0
offset_right = 1129.0
offset_bottom = 2448.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 25

[node name="SelectButton" type="Button" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 10
size_flags_stretch_ratio = 0.0
text = "  Select  "

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 185

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
texture = ExtResource("11_sf65b")

[node name="prev" type="Button" parent="MarginContainer/MarginContainer/HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/normal = SubResource("StyleBoxEmpty_vbtvx")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="SelectionContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 50

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer"]
layout_mode = 2
theme_override_constants/margin_top = 450

[node name="Office 1" type="MenuButton" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer"]
custom_minimum_size = Vector2(800, 250)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("1_t1jse")
theme_type_variation = &"AlphaCircle"
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("5_bky6q")
text = "Office 1     "
flat = false
alignment = 2

[node name="Office1" type="Sprite2D" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer/Office 1"]
position = Vector2(191, 127)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_x1mub")

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer/Office 1"]
visible = false
layout_mode = 0
offset_left = 385.0
offset_top = 167.0
offset_right = 655.0
offset_bottom = 239.0
text = "Speicher: 1TB"
label_settings = SubResource("LabelSettings_qdg4k")

[node name="Office 2" type="Button" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer"]
z_index = 5
custom_minimum_size = Vector2(800, 250)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("1_t1jse")
theme_override_fonts/font = ExtResource("3_ysc4p")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = ExtResource("4_dq6qx")
theme_override_styles/disabled_mirrored = ExtResource("4_dq6qx")
theme_override_styles/disabled = ExtResource("4_dq6qx")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_dq6qx")
theme_override_styles/hover_pressed = ExtResource("4_dq6qx")
theme_override_styles/hover_mirrored = ExtResource("4_dq6qx")
theme_override_styles/hover = ExtResource("4_dq6qx")
theme_override_styles/pressed_mirrored = ExtResource("4_dq6qx")
theme_override_styles/pressed = ExtResource("4_dq6qx")
theme_override_styles/normal_mirrored = ExtResource("4_dq6qx")
theme_override_styles/normal = ExtResource("5_bky6q")
text = "Office 2     "
alignment = 2

[node name="Office2" type="Sprite2D" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer/Office 2"]
position = Vector2(209, 123)
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_yyt8q")

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer/Office 2"]
visible = false
layout_mode = 0
offset_left = 385.0
offset_top = 167.0
offset_right = 655.0
offset_bottom = 239.0
text = "Speicher: "
label_settings = SubResource("LabelSettings_qdg4k")

[node name="Office 3" type="MenuButton" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer"]
custom_minimum_size = Vector2(800, 250)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("1_t1jse")
theme_type_variation = &"AlphaCircle"
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = ExtResource("4_dq6qx")
theme_override_styles/normal = ExtResource("5_bky6q")
text = "Office 3     "
flat = false
alignment = 2

[node name="Office3" type="Sprite2D" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer/Office 3"]
position = Vector2(205, 126)
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_62s6n")

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer/Office 3"]
visible = false
layout_mode = 0
offset_left = 385.0
offset_top = 167.0
offset_right = 655.0
offset_bottom = 239.0
text = "RAM: 32GB"
label_settings = SubResource("LabelSettings_qdg4k")

[node name="Gaming 1" type="MenuButton" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer"]
custom_minimum_size = Vector2(800, 250)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("1_t1jse")
theme_type_variation = &"AlphaCircle"
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("5_bky6q")
text = "Gaming 1     "
flat = false
alignment = 2

[node name="Pc" type="Sprite2D" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer/Gaming 1"]
position = Vector2(184, 125)
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_gjx2m")

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer/Gaming 1"]
visible = false
layout_mode = 0
offset_left = 385.0
offset_top = 167.0
offset_right = 655.0
offset_bottom = 239.0
text = "Speicher: 1TB"
label_settings = SubResource("LabelSettings_qdg4k")

[node name="Gaming 2" type="MenuButton" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer"]
custom_minimum_size = Vector2(800, 250)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("1_t1jse")
theme_type_variation = &"AlphaCircle"
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("5_bky6q")
text = "Gaming 2     "
flat = false
alignment = 2

[node name="Gaming2" type="Sprite2D" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer/Gaming 2"]
position = Vector2(191, 120)
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_ty3kk")

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer/Gaming 2"]
visible = false
layout_mode = 0
offset_left = 385.0
offset_top = 167.0
offset_right = 655.0
offset_bottom = 239.0
text = "RAM: 32GB"
label_settings = SubResource("LabelSettings_qdg4k")

[node name="Gaming 3" type="MenuButton" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer"]
custom_minimum_size = Vector2(800, 250)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("1_t1jse")
theme_type_variation = &"AlphaCircle"
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("5_bky6q")
text = "Gaming 3     "
flat = false
alignment = 2

[node name="Gaming3" type="Sprite2D" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer/Gaming 3"]
position = Vector2(181, 131)
scale = Vector2(0.7, 0.7)
texture = ExtResource("10_dkcge")

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer/Gaming 3"]
visible = false
layout_mode = 0
offset_left = 385.0
offset_top = 167.0
offset_right = 655.0
offset_bottom = 239.0
text = "Speicher: 2TB"
label_settings = SubResource("LabelSettings_qdg4k")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/SelectionContainer"]
layout_mode = 2
theme_override_constants/margin_top = 550

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
texture = ExtResource("11_sf65b")
flip_h = true

[node name="next" type="Button" parent="MarginContainer/MarginContainer/HBoxContainer/TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/normal = SubResource("StyleBoxEmpty_vbtvx")

[node name="SelectionMarker" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 548.0
offset_top = 285.0
offset_right = -527.0
offset_bottom = 335.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="TextureRect" parent="."]
layout_direction = 1
layout_mode = 0
offset_left = 28.0
offset_top = 37.0
offset_right = 108.0
offset_bottom = 117.0
size_flags_horizontal = 0
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
texture = ExtResource("11_sf65b")

[node name="backButton" type="Button" parent="BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_right = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_vbtvx")
theme_override_styles/normal = SubResource("StyleBoxEmpty_vbtvx")

[node name="SelectButton" type="Button" parent="."]
z_index = 5
layout_mode = 2
offset_left = 373.0
offset_top = 2272.0
offset_right = 755.0
offset_bottom = 2427.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t1jse")
text = "Select"

[node name="Buttons" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_6it2k")

[connection signal="pressed" from="MarginContainer/MarginContainer/HBoxContainer/TextureRect/prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/HBoxContainer/TextureRect2/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="BackButton/backButton" to="." method="_on_prev_pressed"]
